[gd_scene load_steps=35 format=2]

[ext_resource path="res://Assets/KeThu/2 Hyena/Hyena_idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/KeThu/2 Hyena/Hyena_walk.png" type="Texture" id=2]
[ext_resource path="res://Assets/KeThu/2 Hyena/Hyena_attack.png" type="Texture" id=3]
[ext_resource path="res://Assets/KeThu/2 Hyena/Hyena_death.png" type="Texture" id=4]
[ext_resource path="res://Assets/KeThu/2 Hyena/Hyena_hurt.png" type="Texture" id=5]
[ext_resource path="res://Scences/KeThu/Cao.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "chet",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "tancong",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "dungyen",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "bithuong",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "dichuyen",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=26]

[sub_resource type="CapsuleShape2D" id=27]

[sub_resource type="CircleShape2D" id=28]
radius = 6.0

[node name="Cao" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
frames = SubResource( 25 )
animation = "tancong"
frame = 3
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource( 26 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 15, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="XacDinhPlayer" type="RayCast2D" parent="."]
position = Vector2( -8, 0 )
rotation = -1.57079
enabled = true
cast_to = Vector2( 0, 30 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
rotation = 1.54905
shape = SubResource( 27 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 16, -10 )
shape = SubResource( 28 )
disabled = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
